--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -26,20 +26,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install webdriver-manager
 
     - name: Install Chrome Browser
       run: |
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
 
-    - name: Install ChromeDriver
+    - name: Verify Chrome installation
       run: |
-        CHROMEDRIVER_VERSION=$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
-        wget -q "https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip"
-        unzip chromedriver_linux64.zip
-        sudo mv chromedriver /usr/local/bin/
-        sudo chmod +x /usr/local/bin/chromedriver
-        chromedriver --version
+        google-chrome --version
 
     - name: Run Selenium Tests
       run: |
@@ -50,4 +46,11 @@ jobs:
       with:
         name: selenium-test-report
         path: selenium-report.html
+        retention-days: 30
+
+    - name: Upload HTML File
+      uses: actions/upload-artifact@v4
+      with:
+        name: todo-app-html
+        path: ToDoList.html
         retention-days: 30
